Sostenuto/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    LIST
    RARROW
    COLON
    PRINTF
    INPUT

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> COMP ID G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK
Rule 2     F_FUNCDEC -> FUNCDEC F_FUNCDEC
Rule 3     F_FUNCDEC -> e
Rule 4     VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR
Rule 5     VARID -> LSQUARE NUMBER RSQUARE VARIDB
Rule 6     VARIDB -> LSQUARE NUMBER RSQUARE VARIDB
Rule 7     VARIDB -> e
Rule 8     EXPVARID -> LSQUARE C1 EXP C2 RSQUARE EXPVARIDB
Rule 9     EXPVARIDB -> LSQUARE C1 EXP C2 RSQUARE EXPVARIDB
Rule 10    EXPVARIDB -> e
Rule 11    VARDECB -> COMMA TYPE ID VARIDB VARDECB
Rule 12    VARDECB -> e
Rule 13    FUNCDEC -> FUNC F1 AUXFUNCDEC FUNCBLOCK
Rule 14    AUXFUNCDEC -> ID DDOT F_ARGS LARROW RETTYPE
Rule 15    F_ARGS -> ARGS
Rule 16    F_ARGS -> e
Rule 17    FUNCBLOCK -> LTRIAN F_VARDEC STATEMENTS F_RETURN RTRIAN
Rule 18    F_VARDEC -> VARDEC
Rule 19    F_VARDEC -> e
Rule 20    F_RETURN -> RETURN EXP SEMICOLON
Rule 21    F_RETURN -> e
Rule 22    STATEMENTS -> STATEMENT N0 STATEMENTS
Rule 23    STATEMENTS -> e
Rule 24    N0 -> e
Rule 25    MAIN_BLOCK -> MAIN FUNCBLOCK
Rule 26    STATEMENT -> ASSIGN SEMICOLON
Rule 27    STATEMENT -> FUNCCALL SEMICOLON
Rule 28    STATEMENT -> WHILE_BLOCK
Rule 29    STATEMENT -> RITORNELLO
Rule 30    STATEMENT -> IF_BLOCK
Rule 31    STATEMENT -> PRINT SEMICOLON
Rule 32    STATEMENT -> PLAYFUNCS SEMICOLON
Rule 33    STATEMENT -> MUSICFUNCS SEMICOLON
Rule 34    ARGS -> TYPE ID H_ARGS
Rule 35    H_ARGS -> COMMA ARGS
Rule 36    H_ARGS -> e
Rule 37    CALLARGS -> C1 EXP C2 H_CALLARGS
Rule 38    CALLARGS -> e
Rule 39    C1 -> e
Rule 40    C2 -> e
Rule 41    H_CALLARGS -> COMMA CALLARGS
Rule 42    H_CALLARGS -> e
Rule 43    FUNCCALL -> ID LPAR CALLARGS RPAR
Rule 44    PRINT -> DISP LPAR EXP RPAR
Rule 45    MUSICFUNCS -> STREAMT LPAR EXP RPAR
Rule 46    MUSICFUNCS -> MIDIT LPAR RPAR
Rule 47    MUSICFUNCS -> MST LPAR RPAR
Rule 48    PLAYFUNCS -> PLAYT LPAR EXP COMMA EXP RPAR
Rule 49    PLAYFUNCS -> PLAYT LPAR SILENCE COMMA EXP COMMA EXP RPAR
Rule 50    TYPE -> NUMBERTYPE
Rule 51    TYPE -> LISTTYPE
Rule 52    TYPE -> NOTETYPE
Rule 53    TYPE -> BOOLTYPE
Rule 54    TYPE -> STRINGTYPE
Rule 55    RETTYPE -> NUMBERTYPE
Rule 56    RETTYPE -> LISTTYPE
Rule 57    RETTYPE -> NOTETYPE
Rule 58    RETTYPE -> BOOLTYPE
Rule 59    RETTYPE -> SILENCE
Rule 60    BLOCK -> LTRIAN STATEMENTS RTRIAN
Rule 61    ASSIGN -> ID EXPVARIDB ASSIGNATION EXP
Rule 62    IF_BLOCK -> IF DDOT EXP A1 IF_B
Rule 63    A1 -> e
Rule 64    A2 -> e
Rule 65    A3 -> e
Rule 66    A3B -> e
Rule 67    IF_B -> BLOCK F_ELSE A2
Rule 68    IF_B -> LARROW IF_ARROW SEMICOLON A2
Rule 69    IF_ARROW -> FUNCCALL
Rule 70    IF_ARROW -> ASSIGN
Rule 71    F_ELSE -> ELSE A3 A2 A3B ELSE_BLOCK
Rule 72    F_ELSE -> e
Rule 73    ELSE_BLOCK -> BLOCK
Rule 74    ELSE_BLOCK -> IF_BLOCK
Rule 75    WHILE_BLOCK -> WHILE W1 DDOT EXP A1 BLOCK W2
Rule 76    W1 -> e
Rule 77    W2 -> e
Rule 78    RITORNELLO -> LRITT RITARG STATEMENTS RRITT
Rule 79    RITARG -> LPAR EXP RPAR LARROW
Rule 80    RITARG -> e
Rule 81    EXP -> EXPR EXP2 P7
Rule 82    P7 -> e
Rule 83    EXP2 -> e
Rule 84    EXP2 -> EXP2_ops EXPR
Rule 85    EXP2_ops -> GT
Rule 86    EXP2_ops -> LT
Rule 87    EXP2_ops -> DIFF
Rule 88    EXP2_ops -> EQ
Rule 89    EXP2_ops -> OR
Rule 90    EXP2_ops -> AND
Rule 91    EXPR -> TERM P4 EXPR_B
Rule 92    P4 -> e
Rule 93    EXPR_B -> EXPR_B_OPS EXPR
Rule 94    EXPR_B -> e
Rule 95    EXPR_B_OPS -> PLUS
Rule 96    EXPR_B_OPS -> MINUS
Rule 97    TERM -> FACTOR P5 TERM_B
Rule 98    P5 -> e
Rule 99    TERM_B -> TERM_B_OPS TERM
Rule 100   TERM_B -> e
Rule 101   TERM_B_OPS -> TIMES
Rule 102   TERM_B_OPS -> DIVIDE
Rule 103   IDVARID -> ID EXPVARID
Rule 104   ARRAY -> LSQUARE C1 EXP C2 ARRAYB RSQUARE
Rule 105   ARRAYB -> COMMA C1 EXP C2 ARRAYB
Rule 106   ARRAYB -> e
Rule 107   FACTOR -> NUMBER
Rule 108   FACTOR -> ID
Rule 109   FACTOR -> FACTOR_CTE
Rule 110   FACTOR -> LPAR P6 EXP RPAR
Rule 111   FACTOR -> IDVARID
Rule 112   FACTOR -> FUNCCALL
Rule 113   FACTOR -> VARCTE
Rule 114   FACTOR -> ARRAY
Rule 115   P6 -> e
Rule 116   FACTOR_CTE -> PLUS NUMBER
Rule 117   FACTOR_CTE -> MINUS NUMBER
Rule 118   VARCTE -> NOTE
Rule 119   VARCTE -> BOOL
Rule 120   VARCTE -> STRING
Rule 121   e -> <empty>
Rule 122   F1 -> e
Rule 123   F2 -> e
Rule 124   G1 -> e
Rule 125   G2 -> e

Terminals, with rules where they appear

AND                  : 90
ASSIGNATION          : 61
BOOL                 : 119
BOOLTYPE             : 53 58
COLON                : 
COMMA                : 11 35 41 48 49 49 105
COMP                 : 1
DDOT                 : 14 62 75
DIFF                 : 87
DISP                 : 44
DIVIDE               : 102
ELSE                 : 71
EQ                   : 88
FUNC                 : 13
GT                   : 85
ID                   : 1 4 11 14 34 43 61 103 108
IF                   : 62
INPUT                : 
LARROW               : 14 68 79
LIST                 : 
LISTTYPE             : 51 56
LPAR                 : 4 43 44 45 46 47 48 49 79 110
LRITT                : 78
LSQUARE              : 5 6 8 9 104
LT                   : 86
LTRIAN               : 17 60
MAIN                 : 25
MIDIT                : 46
MINUS                : 96 117
MST                  : 47
NOTE                 : 118
NOTETYPE             : 52 57
NUMBER               : 5 6 107 116 117
NUMBERTYPE           : 50 55
OR                   : 89
PLAYT                : 48 49
PLUS                 : 95 116
PRINTF               : 
RARROW               : 
RETURN               : 20
RPAR                 : 4 43 44 45 46 47 48 49 79 110
RRITT                : 78
RSQUARE              : 5 6 8 9 104
RTRIAN               : 17 60
SEMICOLON            : 20 26 27 31 32 33 68
SILENCE              : 49 59
STREAMT              : 45
STRING               : 120
STRINGTYPE           : 54
TIMES                : 101
VAR                  : 4
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

A1                   : 62 75
A2                   : 67 68 71
A3                   : 71
A3B                  : 71
ARGS                 : 15 35
ARRAY                : 114
ARRAYB               : 104 105
ASSIGN               : 26 70
AUXFUNCDEC           : 13
BLOCK                : 67 73 75
C1                   : 8 9 37 104 105
C2                   : 8 9 37 104 105
CALLARGS             : 41 43
ELSE_BLOCK           : 71
EXP                  : 8 9 20 37 44 45 48 48 49 49 61 62 75 79 104 105 110
EXP2                 : 81
EXP2_ops             : 84
EXPR                 : 81 84 93
EXPR_B               : 91
EXPR_B_OPS           : 93
EXPVARID             : 103
EXPVARIDB            : 8 9 61
F1                   : 1 13
F2                   : 
FACTOR               : 97
FACTOR_CTE           : 109
FUNCBLOCK            : 13 25
FUNCCALL             : 27 69 112
FUNCDEC              : 2
F_ARGS               : 14
F_ELSE               : 67
F_FUNCDEC            : 1 2
F_RETURN             : 17
F_VARDEC             : 1 17
G1                   : 1
G2                   : 1
H_ARGS               : 34
H_CALLARGS           : 37
IDVARID              : 111
IF_ARROW             : 68
IF_B                 : 62
IF_BLOCK             : 30 74
MAIN_BLOCK           : 1
MUSICFUNCS           : 33
N0                   : 22
P4                   : 91
P5                   : 97
P6                   : 110
P7                   : 81
PLAYFUNCS            : 32
PRINT                : 31
PROGRAM              : 0
RETTYPE              : 14
RITARG               : 78
RITORNELLO           : 29
STATEMENT            : 22
STATEMENTS           : 17 22 60 78
TERM                 : 91 99
TERM_B               : 97
TERM_B_OPS           : 99
TYPE                 : 4 11 34
VARCTE               : 113
VARDEC               : 18
VARDECB              : 4 11
VARID                : 
VARIDB               : 4 5 6 11
W1                   : 75
W2                   : 75
WHILE_BLOCK          : 28
e                    : 3 7 10 12 16 19 21 23 24 36 38 39 40 42 63 64 65 66 72 76 77 80 82 83 92 94 98 100 106 115 122 123 124 125

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . COMP ID G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK

    COMP            shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> COMP . ID G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK

    ID              shift and go to state 3


state 3

    (1) PROGRAM -> COMP ID . G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK
    (124) G1 -> . e
    (121) e -> .

    VAR             reduce using rule 121 (e -> .)
    FUNC            reduce using rule 121 (e -> .)
    MAIN            reduce using rule 121 (e -> .)

    G1                             shift and go to state 4
    e                              shift and go to state 5

state 4

    (1) PROGRAM -> COMP ID G1 . F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK
    (18) F_VARDEC -> . VARDEC
    (19) F_VARDEC -> . e
    (4) VARDEC -> . VAR LPAR TYPE ID VARIDB VARDECB RPAR
    (121) e -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 121 (e -> .)
    MAIN            reduce using rule 121 (e -> .)

    F_VARDEC                       shift and go to state 6
    VARDEC                         shift and go to state 7
    e                              shift and go to state 8

state 5

    (124) G1 -> e .

    VAR             reduce using rule 124 (G1 -> e .)
    FUNC            reduce using rule 124 (G1 -> e .)
    MAIN            reduce using rule 124 (G1 -> e .)


state 6

    (1) PROGRAM -> COMP ID G1 F_VARDEC . G2 F_FUNCDEC F1 MAIN_BLOCK
    (125) G2 -> . e
    (121) e -> .

    FUNC            reduce using rule 121 (e -> .)
    MAIN            reduce using rule 121 (e -> .)

    G2                             shift and go to state 10
    e                              shift and go to state 11

state 7

    (18) F_VARDEC -> VARDEC .

    FUNC            reduce using rule 18 (F_VARDEC -> VARDEC .)
    MAIN            reduce using rule 18 (F_VARDEC -> VARDEC .)
    ID              reduce using rule 18 (F_VARDEC -> VARDEC .)
    WHILE           reduce using rule 18 (F_VARDEC -> VARDEC .)
    LRITT           reduce using rule 18 (F_VARDEC -> VARDEC .)
    IF              reduce using rule 18 (F_VARDEC -> VARDEC .)
    DISP            reduce using rule 18 (F_VARDEC -> VARDEC .)
    PLAYT           reduce using rule 18 (F_VARDEC -> VARDEC .)
    STREAMT         reduce using rule 18 (F_VARDEC -> VARDEC .)
    MIDIT           reduce using rule 18 (F_VARDEC -> VARDEC .)
    MST             reduce using rule 18 (F_VARDEC -> VARDEC .)
    RETURN          reduce using rule 18 (F_VARDEC -> VARDEC .)
    RTRIAN          reduce using rule 18 (F_VARDEC -> VARDEC .)


state 8

    (19) F_VARDEC -> e .

    FUNC            reduce using rule 19 (F_VARDEC -> e .)
    MAIN            reduce using rule 19 (F_VARDEC -> e .)
    ID              reduce using rule 19 (F_VARDEC -> e .)
    WHILE           reduce using rule 19 (F_VARDEC -> e .)
    LRITT           reduce using rule 19 (F_VARDEC -> e .)
    IF              reduce using rule 19 (F_VARDEC -> e .)
    DISP            reduce using rule 19 (F_VARDEC -> e .)
    PLAYT           reduce using rule 19 (F_VARDEC -> e .)
    STREAMT         reduce using rule 19 (F_VARDEC -> e .)
    MIDIT           reduce using rule 19 (F_VARDEC -> e .)
    MST             reduce using rule 19 (F_VARDEC -> e .)
    RETURN          reduce using rule 19 (F_VARDEC -> e .)
    RTRIAN          reduce using rule 19 (F_VARDEC -> e .)


state 9

    (4) VARDEC -> VAR . LPAR TYPE ID VARIDB VARDECB RPAR

    LPAR            shift and go to state 12


state 10

    (1) PROGRAM -> COMP ID G1 F_VARDEC G2 . F_FUNCDEC F1 MAIN_BLOCK
    (2) F_FUNCDEC -> . FUNCDEC F_FUNCDEC
    (3) F_FUNCDEC -> . e
    (13) FUNCDEC -> . FUNC F1 AUXFUNCDEC FUNCBLOCK
    (121) e -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 121 (e -> .)

    F_FUNCDEC                      shift and go to state 13
    FUNCDEC                        shift and go to state 14
    e                              shift and go to state 15

state 11

    (125) G2 -> e .

    FUNC            reduce using rule 125 (G2 -> e .)
    MAIN            reduce using rule 125 (G2 -> e .)


state 12

    (4) VARDEC -> VAR LPAR . TYPE ID VARIDB VARDECB RPAR
    (50) TYPE -> . NUMBERTYPE
    (51) TYPE -> . LISTTYPE
    (52) TYPE -> . NOTETYPE
    (53) TYPE -> . BOOLTYPE
    (54) TYPE -> . STRINGTYPE

    NUMBERTYPE      shift and go to state 18
    LISTTYPE        shift and go to state 19
    NOTETYPE        shift and go to state 20
    BOOLTYPE        shift and go to state 21
    STRINGTYPE      shift and go to state 22

    TYPE                           shift and go to state 17

state 13

    (1) PROGRAM -> COMP ID G1 F_VARDEC G2 F_FUNCDEC . F1 MAIN_BLOCK
    (122) F1 -> . e
    (121) e -> .

    MAIN            reduce using rule 121 (e -> .)

    F1                             shift and go to state 23
    e                              shift and go to state 24

state 14

    (2) F_FUNCDEC -> FUNCDEC . F_FUNCDEC
    (2) F_FUNCDEC -> . FUNCDEC F_FUNCDEC
    (3) F_FUNCDEC -> . e
    (13) FUNCDEC -> . FUNC F1 AUXFUNCDEC FUNCBLOCK
    (121) e -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 121 (e -> .)

    FUNCDEC                        shift and go to state 14
    F_FUNCDEC                      shift and go to state 25
    e                              shift and go to state 15

state 15

    (3) F_FUNCDEC -> e .

    MAIN            reduce using rule 3 (F_FUNCDEC -> e .)


state 16

    (13) FUNCDEC -> FUNC . F1 AUXFUNCDEC FUNCBLOCK
    (122) F1 -> . e
    (121) e -> .

    ID              reduce using rule 121 (e -> .)

    F1                             shift and go to state 26
    e                              shift and go to state 24

state 17

    (4) VARDEC -> VAR LPAR TYPE . ID VARIDB VARDECB RPAR

    ID              shift and go to state 27


state 18

    (50) TYPE -> NUMBERTYPE .

    ID              reduce using rule 50 (TYPE -> NUMBERTYPE .)


state 19

    (51) TYPE -> LISTTYPE .

    ID              reduce using rule 51 (TYPE -> LISTTYPE .)


state 20

    (52) TYPE -> NOTETYPE .

    ID              reduce using rule 52 (TYPE -> NOTETYPE .)


state 21

    (53) TYPE -> BOOLTYPE .

    ID              reduce using rule 53 (TYPE -> BOOLTYPE .)


state 22

    (54) TYPE -> STRINGTYPE .

    ID              reduce using rule 54 (TYPE -> STRINGTYPE .)


state 23

    (1) PROGRAM -> COMP ID G1 F_VARDEC G2 F_FUNCDEC F1 . MAIN_BLOCK
    (25) MAIN_BLOCK -> . MAIN FUNCBLOCK

    MAIN            shift and go to state 29

    MAIN_BLOCK                     shift and go to state 28

state 24

    (122) F1 -> e .

    MAIN            reduce using rule 122 (F1 -> e .)
    ID              reduce using rule 122 (F1 -> e .)


state 25

    (2) F_FUNCDEC -> FUNCDEC F_FUNCDEC .

    MAIN            reduce using rule 2 (F_FUNCDEC -> FUNCDEC F_FUNCDEC .)


state 26

    (13) FUNCDEC -> FUNC F1 . AUXFUNCDEC FUNCBLOCK
    (14) AUXFUNCDEC -> . ID DDOT F_ARGS LARROW RETTYPE

    ID              shift and go to state 31

    AUXFUNCDEC                     shift and go to state 30

state 27

    (4) VARDEC -> VAR LPAR TYPE ID . VARIDB VARDECB RPAR
    (6) VARIDB -> . LSQUARE NUMBER RSQUARE VARIDB
    (7) VARIDB -> . e
    (121) e -> .

    LSQUARE         shift and go to state 33
    COMMA           reduce using rule 121 (e -> .)
    RPAR            reduce using rule 121 (e -> .)

    VARIDB                         shift and go to state 32
    e                              shift and go to state 34

state 28

    (1) PROGRAM -> COMP ID G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK .

    $end            reduce using rule 1 (PROGRAM -> COMP ID G1 F_VARDEC G2 F_FUNCDEC F1 MAIN_BLOCK .)


state 29

    (25) MAIN_BLOCK -> MAIN . FUNCBLOCK
    (17) FUNCBLOCK -> . LTRIAN F_VARDEC STATEMENTS F_RETURN RTRIAN

    LTRIAN          shift and go to state 36

    FUNCBLOCK                      shift and go to state 35

state 30

    (13) FUNCDEC -> FUNC F1 AUXFUNCDEC . FUNCBLOCK
    (17) FUNCBLOCK -> . LTRIAN F_VARDEC STATEMENTS F_RETURN RTRIAN

    LTRIAN          shift and go to state 36

    FUNCBLOCK                      shift and go to state 37

state 31

    (14) AUXFUNCDEC -> ID . DDOT F_ARGS LARROW RETTYPE

    DDOT            shift and go to state 38


state 32

    (4) VARDEC -> VAR LPAR TYPE ID VARIDB . VARDECB RPAR
    (11) VARDECB -> . COMMA TYPE ID VARIDB VARDECB
    (12) VARDECB -> . e
    (121) e -> .

    COMMA           shift and go to state 40
    RPAR            reduce using rule 121 (e -> .)

    VARDECB                        shift and go to state 39
    e                              shift and go to state 41

state 33

    (6) VARIDB -> LSQUARE . NUMBER RSQUARE VARIDB

    NUMBER          shift and go to state 42


state 34

    (7) VARIDB -> e .

    COMMA           reduce using rule 7 (VARIDB -> e .)
    RPAR            reduce using rule 7 (VARIDB -> e .)


state 35

    (25) MAIN_BLOCK -> MAIN FUNCBLOCK .

    $end            reduce using rule 25 (MAIN_BLOCK -> MAIN FUNCBLOCK .)


state 36

    (17) FUNCBLOCK -> LTRIAN . F_VARDEC STATEMENTS F_RETURN RTRIAN
    (18) F_VARDEC -> . VARDEC
    (19) F_VARDEC -> . e
    (4) VARDEC -> . VAR LPAR TYPE ID VARIDB VARDECB RPAR
    (121) e -> .

    VAR             shift and go to state 9
    ID              reduce using rule 121 (e -> .)
    WHILE           reduce using rule 121 (e -> .)
    LRITT           reduce using rule 121 (e -> .)
    IF              reduce using rule 121 (e -> .)
    DISP            reduce using rule 121 (e -> .)
    PLAYT           reduce using rule 121 (e -> .)
    STREAMT         reduce using rule 121 (e -> .)
    MIDIT           reduce using rule 121 (e -> .)
    MST             reduce using rule 121 (e -> .)
    RETURN          reduce using rule 121 (e -> .)
    RTRIAN          reduce using rule 121 (e -> .)

    F_VARDEC                       shift and go to state 43
    VARDEC                         shift and go to state 7
    e                              shift and go to state 8

state 37

    (13) FUNCDEC -> FUNC F1 AUXFUNCDEC FUNCBLOCK .

    FUNC            reduce using rule 13 (FUNCDEC -> FUNC F1 AUXFUNCDEC FUNCBLOCK .)
    MAIN            reduce using rule 13 (FUNCDEC -> FUNC F1 AUXFUNCDEC FUNCBLOCK .)


state 38

    (14) AUXFUNCDEC -> ID DDOT . F_ARGS LARROW RETTYPE
    (15) F_ARGS -> . ARGS
    (16) F_ARGS -> . e
    (34) ARGS -> . TYPE ID H_ARGS
    (121) e -> .
    (50) TYPE -> . NUMBERTYPE
    (51) TYPE -> . LISTTYPE
    (52) TYPE -> . NOTETYPE
    (53) TYPE -> . BOOLTYPE
    (54) TYPE -> . STRINGTYPE

    LARROW          reduce using rule 121 (e -> .)
    NUMBERTYPE      shift and go to state 18
    LISTTYPE        shift and go to state 19
    NOTETYPE        shift and go to state 20
    BOOLTYPE        shift and go to state 21
    STRINGTYPE      shift and go to state 22

    F_ARGS                         shift and go to state 44
    ARGS                           shift and go to state 45
    e                              shift and go to state 46
    TYPE                           shift and go to state 47

state 39

    (4) VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB . RPAR

    RPAR            shift and go to state 48


state 40

    (11) VARDECB -> COMMA . TYPE ID VARIDB VARDECB
    (50) TYPE -> . NUMBERTYPE
    (51) TYPE -> . LISTTYPE
    (52) TYPE -> . NOTETYPE
    (53) TYPE -> . BOOLTYPE
    (54) TYPE -> . STRINGTYPE

    NUMBERTYPE      shift and go to state 18
    LISTTYPE        shift and go to state 19
    NOTETYPE        shift and go to state 20
    BOOLTYPE        shift and go to state 21
    STRINGTYPE      shift and go to state 22

    TYPE                           shift and go to state 49

state 41

    (12) VARDECB -> e .

    RPAR            reduce using rule 12 (VARDECB -> e .)


state 42

    (6) VARIDB -> LSQUARE NUMBER . RSQUARE VARIDB

    RSQUARE         shift and go to state 50


state 43

    (17) FUNCBLOCK -> LTRIAN F_VARDEC . STATEMENTS F_RETURN RTRIAN
    (22) STATEMENTS -> . STATEMENT N0 STATEMENTS
    (23) STATEMENTS -> . e
    (26) STATEMENT -> . ASSIGN SEMICOLON
    (27) STATEMENT -> . FUNCCALL SEMICOLON
    (28) STATEMENT -> . WHILE_BLOCK
    (29) STATEMENT -> . RITORNELLO
    (30) STATEMENT -> . IF_BLOCK
    (31) STATEMENT -> . PRINT SEMICOLON
    (32) STATEMENT -> . PLAYFUNCS SEMICOLON
    (33) STATEMENT -> . MUSICFUNCS SEMICOLON
    (121) e -> .
    (61) ASSIGN -> . ID EXPVARIDB ASSIGNATION EXP
    (43) FUNCCALL -> . ID LPAR CALLARGS RPAR
    (75) WHILE_BLOCK -> . WHILE W1 DDOT EXP A1 BLOCK W2
    (78) RITORNELLO -> . LRITT RITARG STATEMENTS RRITT
    (62) IF_BLOCK -> . IF DDOT EXP A1 IF_B
    (44) PRINT -> . DISP LPAR EXP RPAR
    (48) PLAYFUNCS -> . PLAYT LPAR EXP COMMA EXP RPAR
    (49) PLAYFUNCS -> . PLAYT LPAR SILENCE COMMA EXP COMMA EXP RPAR
    (45) MUSICFUNCS -> . STREAMT LPAR EXP RPAR
    (46) MUSICFUNCS -> . MIDIT LPAR RPAR
    (47) MUSICFUNCS -> . MST LPAR RPAR

    RETURN          reduce using rule 121 (e -> .)
    RTRIAN          reduce using rule 121 (e -> .)
    ID              shift and go to state 62
    WHILE           shift and go to state 63
    LRITT           shift and go to state 64
    IF              shift and go to state 65
    DISP            shift and go to state 66
    PLAYT           shift and go to state 67
    STREAMT         shift and go to state 68
    MIDIT           shift and go to state 69
    MST             shift and go to state 70

    STATEMENTS                     shift and go to state 51
    STATEMENT                      shift and go to state 52
    e                              shift and go to state 53
    ASSIGN                         shift and go to state 54
    FUNCCALL                       shift and go to state 55
    WHILE_BLOCK                    shift and go to state 56
    RITORNELLO                     shift and go to state 57
    IF_BLOCK                       shift and go to state 58
    PRINT                          shift and go to state 59
    PLAYFUNCS                      shift and go to state 60
    MUSICFUNCS                     shift and go to state 61

state 44

    (14) AUXFUNCDEC -> ID DDOT F_ARGS . LARROW RETTYPE

    LARROW          shift and go to state 71


state 45

    (15) F_ARGS -> ARGS .

    LARROW          reduce using rule 15 (F_ARGS -> ARGS .)


state 46

    (16) F_ARGS -> e .

    LARROW          reduce using rule 16 (F_ARGS -> e .)


state 47

    (34) ARGS -> TYPE . ID H_ARGS

    ID              shift and go to state 72


state 48

    (4) VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .

    FUNC            reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    MAIN            reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    ID              reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    WHILE           reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    LRITT           reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    IF              reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    DISP            reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    PLAYT           reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    STREAMT         reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    MIDIT           reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    MST             reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    RETURN          reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)
    RTRIAN          reduce using rule 4 (VARDEC -> VAR LPAR TYPE ID VARIDB VARDECB RPAR .)


state 49

    (11) VARDECB -> COMMA TYPE . ID VARIDB VARDECB

    ID              shift and go to state 73


state 50

    (6) VARIDB -> LSQUARE NUMBER RSQUARE . VARIDB
    (6) VARIDB -> . LSQUARE NUMBER RSQUARE VARIDB
    (7) VARIDB -> . e
    (121) e -> .

    LSQUARE         shift and go to state 33
    COMMA           reduce using rule 121 (e -> .)
    RPAR            reduce using rule 121 (e -> .)

    VARIDB                         shift and go to state 74
    e                              shift and go to state 34

state 51

    (17) FUNCBLOCK -> LTRIAN F_VARDEC STATEMENTS . F_RETURN RTRIAN
    (20) F_RETURN -> . RETURN EXP SEMICOLON
    (21) F_RETURN -> . e
    (121) e -> .

    RETURN          shift and go to state 76
    RTRIAN          reduce using rule 121 (e -> .)

    F_RETURN                       shift and go to state 75
    e                              shift and go to state 77

state 52

    (22) STATEMENTS -> STATEMENT . N0 STATEMENTS
    (24) N0 -> . e
    (121) e -> .

    ID              reduce using rule 121 (e -> .)
    WHILE           reduce using rule 121 (e -> .)
    LRITT           reduce using rule 121 (e -> .)
    IF              reduce using rule 121 (e -> .)
    DISP            reduce using rule 121 (e -> .)
    PLAYT           reduce using rule 121 (e -> .)
    STREAMT         reduce using rule 121 (e -> .)
    MIDIT           reduce using rule 121 (e -> .)
    MST             reduce using rule 121 (e -> .)
    RETURN          reduce using rule 121 (e -> .)
    RTRIAN          reduce using rule 121 (e -> .)
    RRITT           reduce using rule 121 (e -> .)

    N0                             shift and go to state 78
    e                              shift and go to state 79

state 53

    (23) STATEMENTS -> e .

    RETURN          reduce using rule 23 (STATEMENTS -> e .)
    RTRIAN          reduce using rule 23 (STATEMENTS -> e .)
    RRITT           reduce using rule 23 (STATEMENTS -> e .)


state 54

    (26) STATEMENT -> ASSIGN . SEMICOLON

    SEMICOLON       shift and go to state 80


state 55

    (27) STATEMENT -> FUNCCALL . SEMICOLON

    SEMICOLON       shift and go to state 81


state 56

    (28) STATEMENT -> WHILE_BLOCK .

    ID              reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    WHILE           reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    LRITT           reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    IF              reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    DISP            reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    PLAYT           reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    STREAMT         reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    MIDIT           reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    MST             reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    RETURN          reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    RTRIAN          reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)
    RRITT           reduce using rule 28 (STATEMENT -> WHILE_BLOCK .)


state 57

    (29) STATEMENT -> RITORNELLO .

    ID              reduce using rule 29 (STATEMENT -> RITORNELLO .)
    WHILE           reduce using rule 29 (STATEMENT -> RITORNELLO .)
    LRITT           reduce using rule 29 (STATEMENT -> RITORNELLO .)
    IF              reduce using rule 29 (STATEMENT -> RITORNELLO .)
    DISP            reduce using rule 29 (STATEMENT -> RITORNELLO .)
    PLAYT           reduce using rule 29 (STATEMENT -> RITORNELLO .)
    STREAMT         reduce using rule 29 (STATEMENT -> RITORNELLO .)
    MIDIT           reduce using rule 29 (STATEMENT -> RITORNELLO .)
    MST             reduce using rule 29 (STATEMENT -> RITORNELLO .)
    RETURN          reduce using rule 29 (STATEMENT -> RITORNELLO .)
    RTRIAN          reduce using rule 29 (STATEMENT -> RITORNELLO .)
    RRITT           reduce using rule 29 (STATEMENT -> RITORNELLO .)


state 58

    (30) STATEMENT -> IF_BLOCK .
